@startuml Observer_Pattern_Weather_Monitoring

' Observer Pattern - Weather Monitoring Class Diagram
' Shows one-to-many relationship with loose coupling

skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam class {
    BackgroundColor<<interface>> #E1F5FE
    BorderColor<<interface>> #01579B
    BackgroundColor #FFF9C4
    BorderColor #F57F17
}

' Observer Pattern Interfaces
interface Subject <<interface>> {
    + {abstract} registerObserver(Observer*) : void
    + {abstract} removeObserver(Observer*) : void
    + {abstract} notifyObservers() : void
    + ~Subject()
}

interface Observer <<interface>> {
    + {abstract} update(float, float, float) : void
    + ~Observer()
}

interface DisplayElement <<interface>> {
    + {abstract} display() : void
    + ~DisplayElement()
}

' Concrete Subject
class WeatherData {
    - observers : vector<Observer*>
    - temperature : float
    - humidity : float
    - pressure : float
    --
    + WeatherData()
    + registerObserver(Observer*) : void
    + removeObserver(Observer*) : void
    + notifyObservers() : void
    + measurementsChanged() : void
    + setMeasurements(float, float, float) : void
    + getTemperature() : float
    + getHumidity() : float
    + getPressure() : float
}

' Concrete Observer
class CurrentConditionsDisplay {
    - temperature : float
    - humidity : float
    - weatherData : Subject*
    --
    + CurrentConditionsDisplay(Subject*)
    + ~CurrentConditionsDisplay()
    + update(float, float, float) : void
    + display() : void
}

' Relationships

' Interface implementations
Subject <|.. WeatherData : implements

Observer <|.. CurrentConditionsDisplay : implements
DisplayElement <|.. CurrentConditionsDisplay : implements

' Subject maintains observers
WeatherData o--> "*" Observer : notifies

' Observer knows about subject (for registration)
CurrentConditionsDisplay --> Subject : registers with

note top of Subject
  **Observer Pattern Core**

  Subject interface defines
  the observable contract:
  - Register observers
  - Remove observers
  - Notify all observers
end note

note right of Observer
  **Observer Interface**

  All observers implement
  update() to receive
  notifications from subject

  "Push" model: data
  pushed to observers
end note

note bottom of WeatherData
  **Concrete Subject**

  Maintains observer list
  and notifies them when
  state changes

  Key: Subject doesn't know
  WHAT observers do with data,
  only THAT they exist
end note

note left of CurrentConditionsDisplay
  **Concrete Observer**

  - Registers with subject in constructor
  - Unregisters in destructor (RAII)
  - Updates internal state on notification
  - Displays current conditions

  Implements both Observer and
  DisplayElement interfaces
end note

note as N1
  **Loose Coupling**

  WeatherData knows only about
  Observer interface, not concrete
  implementations

  Can add new observers without
  modifying WeatherData
end note

note as N2
  **Key Principle**

  One-to-Many dependency:
  When WeatherData changes,
  all registered observers
  are notified automatically
end note

@enduml
